--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -12,24 +12,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "import sys\n",
-    "\n",
-    "# If you're on Colab:\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    DATA_PATH = 'https://github.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/tree/master/data/'\n",
-    "\n",
-    "# If you're working locally:\n",
-    "else:\n",
-    "    DATA_PATH = '../data/'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,6 +52,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-06T20:48:26.979037Z",
+     "start_time": "2023-10-06T20:48:20.199841Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -89,7 +87,7 @@
     "    \n",
     "    return df\n",
     "\n",
-    "filepath = DATA_PATH + 'apartments/renthop-nyc.csv'"
+    "filepath = 'https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/apartments/renthop-nyc.csv'"
    ]
   },
   {
