--- a/module3-ridge-regression/JDS_SHR_213_guided_project_notes.ipynb
+++ b/module3-ridge-regression/JDS_SHR_213_guided_project_notes.ipynb
@@ -66,17 +66,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "metadata": {
-    "id": "wz7tyC22gLEA"
-   },
-   "source": [
-    "DATA_PATH = 'https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/'"
-   ],
-   "execution_count": null,
-   "outputs": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "0kaV7oNahJLj"
@@ -116,7 +105,7 @@
     "\n",
     "  return df\n",
     "\n",
-    "df = wrangle(DATA_PATH+'apartments/renthop-nyc.csv')"
+    "df = wrangle(\"https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/apartments/renthop-nyc.csv\")"
    ],
    "execution_count": null,
    "outputs": []
@@ -142,10 +131,10 @@
   {
    "cell_type": "code",
    "source": [
-    "  cutoff = 90\n",
-    "  drop_cols = [col for col in df.select_dtypes('object').columns\n",
-    "              if df[col].nunique() > cutoff]\n",
-    "  df.drop(columns=drop_cols, inplace=True)"
+    "cutoff = 90\n",
+    "drop_cols = [col for col in df.select_dtypes('object').columns\n",
+    "            if df[col].nunique() > cutoff]\n",
+    "df.drop(columns=drop_cols, inplace=True)"
    ],
    "metadata": {
     "id": "ARiIh6vd9u1C"
