--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -12,25 +12,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "import sys\n",
-    "\n",
-    "# If you're on Colab:\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    DATA_PATH = 'https://github.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/tree/master/data/'\n",
-    "    !pip install category_encoders==2.*\n",
-    "\n",
-    "# If you're working locally:\n",
-    "else:\n",
-    "    DATA_PATH = '../data/'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,6 +57,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +80,7 @@
     "    df = pd.read_csv(filepath, usecols=cols)\n",
     "    return df\n",
     "\n",
-    "filepath = DATA_PATH+'condos/NYC_Citywide_Rolling_Calendar_Sales.csv'"
+    "filepath = \"https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/condos/NYC_Citywide_Rolling_Calendar_Sales.csv\""
    ]
   },
   {
