--- a/module4-logistic-regression/JDS_SHR_214_guided_project_notes.ipynb
+++ b/module4-logistic-regression/JDS_SHR_214_guided_project_notes.ipynb
@@ -73,21 +73,6 @@
    }
   },
   {
-   "cell_type": "code",
-   "metadata": {
-    "id": "IorwKysWC9zl",
-    "ExecuteTime": {
-     "end_time": "2023-07-05T15:23:10.802176Z",
-     "start_time": "2023-07-05T15:23:10.783653Z"
-    }
-   },
-   "source": [
-    "DATA_PATH = 'https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/'"
-   ],
-   "execution_count": 2,
-   "outputs": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "id": "2Cz8n4xnWmok"
@@ -112,8 +97,10 @@
     "  df['Pclass'] = df['Pclass'].astype('object')\n",
     "  return df\n",
     "\n",
-    "df = wrangle(DATA_PATH+'titanic/train.csv')\n",
-    "X_test = wrangle(DATA_PATH+'titanic/test.csv')"
+    "\n",
+    "DATA = \"https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/titanic\"\n",
+    "df = wrangle(f\"{DATA}/train.csv\")\n",
+    "X_test = wrangle(f\"{DATA}/test.csv\")"
    ],
    "execution_count": 3,
    "outputs": []
