--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -12,25 +12,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%capture\n",
-    "import sys\n",
-    "\n",
-    "# If you're on Colab:\n",
-    "if 'google.colab' in sys.modules:\n",
-    "    DATA_PATH = 'https://github.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/tree/master/data/'\n",
-    "    !pip install category_encoders==2.*\n",
-    "\n",
-    "# If you're working locally:\n",
-    "else:\n",
-    "    DATA_PATH = '../data/'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,8 +54,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-06T21:02:20.394062Z",
+     "start_time": "2023-10-06T21:02:20.118891Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-06T21:02:20.397217Z",
+     "start_time": "2023-10-06T21:02:20.395159Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def wrangle(filepath):\n",
@@ -96,9 +97,7 @@
     "    # Drop columns to prevent \"leakage\"\n",
     "    df = df.drop(columns=['Rec', 'overall'])\n",
     "    \n",
-    "    return df\n",
-    "\n",
-    "filepath = DATA_PATH + 'burritos/burritos.csv'"
+    "    return df\n"
    ]
   },
   {
@@ -110,12 +109,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-10-06T21:02:26.208748Z",
+     "start_time": "2023-10-06T21:02:25.881364Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                  Burrito  Yelp  Google Chips  Cost  Hunger  Mass (g)  \\\nDate                                                                    \n2016-01-18    California    3.5     4.2   NaN  6.49     3.0       NaN   \n2016-01-24    California    3.5     3.3   NaN  5.45     3.5       NaN   \n2016-01-24       Carnitas   NaN     NaN   NaN  4.85     1.5       NaN   \n2016-01-24    Carne asada   NaN     NaN   NaN  5.25     2.0       NaN   \n2016-01-27     California   4.0     3.8     x  6.59     4.0       NaN   \n...                   ...   ...     ...   ...   ...     ...       ...   \n2019-08-27      Al Pastor   NaN     NaN   NaN  6.00     1.0       NaN   \n2019-08-27  Chile Relleno   NaN     NaN   NaN  6.00     4.0       NaN   \n2019-08-27     California   NaN     NaN   NaN  7.90     3.0       NaN   \n2019-08-27         Shrimp   NaN     NaN   NaN  7.90     3.0       NaN   \n2019-08-27    Pollo Asado   NaN     NaN   NaN  5.50     3.5       NaN   \n\n            Density (g/mL)  Length  Circum  ...  Lobster  Queso  Egg  \\\nDate                                        ...                        \n2016-01-18             NaN     NaN     NaN  ...      NaN    NaN  NaN   \n2016-01-24             NaN     NaN     NaN  ...      NaN    NaN  NaN   \n2016-01-24             NaN     NaN     NaN  ...      NaN    NaN  NaN   \n2016-01-24             NaN     NaN     NaN  ...      NaN    NaN  NaN   \n2016-01-27             NaN     NaN     NaN  ...      NaN    NaN  NaN   \n...                    ...     ...     ...  ...      ...    ...  ...   \n2019-08-27             NaN    17.0    20.5  ...      NaN    NaN  NaN   \n2019-08-27             NaN    19.0    26.0  ...      NaN    NaN  NaN   \n2019-08-27             NaN    20.0    22.0  ...      NaN    NaN  NaN   \n2019-08-27             NaN    22.5    24.5  ...      NaN    NaN  NaN   \n2019-08-27             NaN    17.0    21.3  ...      NaN    NaN  NaN   \n\n            Mushroom  Bacon  Sushi  Avocado  Corn  Zucchini  Great  \nDate                                                                \n2016-01-18       NaN    NaN    NaN      NaN   NaN       NaN      0  \n2016-01-24       NaN    NaN    NaN      NaN   NaN       NaN      0  \n2016-01-24       NaN    NaN    NaN      NaN   NaN       NaN      0  \n2016-01-24       NaN    NaN    NaN      NaN   NaN       NaN      0  \n2016-01-27       NaN    NaN    NaN      NaN   NaN       NaN      1  \n...              ...    ...    ...      ...   ...       ...    ...  \n2019-08-27       NaN    NaN    NaN      NaN   NaN       NaN      0  \n2019-08-27       NaN    NaN    NaN      NaN   NaN       NaN      1  \n2019-08-27       NaN    NaN    NaN      NaN   NaN       NaN      0  \n2019-08-27       NaN    NaN    NaN      NaN   NaN       NaN      1  \n2019-08-27       NaN    NaN    NaN      NaN   NaN       NaN      1  \n\n[421 rows x 59 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Burrito</th>\n      <th>Yelp</th>\n      <th>Google</th>\n      <th>Chips</th>\n      <th>Cost</th>\n      <th>Hunger</th>\n      <th>Mass (g)</th>\n      <th>Density (g/mL)</th>\n      <th>Length</th>\n      <th>Circum</th>\n      <th>...</th>\n      <th>Lobster</th>\n      <th>Queso</th>\n      <th>Egg</th>\n      <th>Mushroom</th>\n      <th>Bacon</th>\n      <th>Sushi</th>\n      <th>Avocado</th>\n      <th>Corn</th>\n      <th>Zucchini</th>\n      <th>Great</th>\n    </tr>\n    <tr>\n      <th>Date</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2016-01-18</th>\n      <td>California</td>\n      <td>3.5</td>\n      <td>4.2</td>\n      <td>NaN</td>\n      <td>6.49</td>\n      <td>3.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2016-01-24</th>\n      <td>California</td>\n      <td>3.5</td>\n      <td>3.3</td>\n      <td>NaN</td>\n      <td>5.45</td>\n      <td>3.5</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2016-01-24</th>\n      <td>Carnitas</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>4.85</td>\n      <td>1.5</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2016-01-24</th>\n      <td>Carne asada</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>5.25</td>\n      <td>2.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2016-01-27</th>\n      <td>California</td>\n      <td>4.0</td>\n      <td>3.8</td>\n      <td>x</td>\n      <td>6.59</td>\n      <td>4.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2019-08-27</th>\n      <td>Al Pastor</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>6.00</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>17.0</td>\n      <td>20.5</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2019-08-27</th>\n      <td>Chile Relleno</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>6.00</td>\n      <td>4.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>19.0</td>\n      <td>26.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2019-08-27</th>\n      <td>California</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>7.90</td>\n      <td>3.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>20.0</td>\n      <td>22.0</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2019-08-27</th>\n      <td>Shrimp</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>7.90</td>\n      <td>3.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>22.5</td>\n      <td>24.5</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2019-08-27</th>\n      <td>Pollo Asado</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>5.50</td>\n      <td>3.5</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>17.0</td>\n      <td>21.3</td>\n      <td>...</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>NaN</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>421 rows × 59 columns</p>\n</div>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "filepath = DATA_PATH + 'burritos/burritos.csv'\n",
-    "df = wrangle(filepath)"
+    "filepath = \"https://raw.githubusercontent.com/bloominstituteoftechnology/DS-Unit-2-Linear-Models/master/data/burritos/burritos.csv\"\n",
+    "df = wrangle(filepath)\n",
+    "df"
    ]
   },
   {
@@ -330,7 +345,7 @@
     "```\n",
     "\n",
     "\n",
-    "```"
+    "```\n"
    ]
   }
  ],
