--- a/module4-logistic-regression/LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/LS_DS_214_assignment.ipynb
@@ -277,7 +277,7 @@
    "source": [
     "# IV. Check Metrics\n",
     "\n",
-    "**Task 7:** Calculate the training and test accuracy score for `model_lr`."
+    "**Task 7:** Calculate the training and test accuracy score for `model_logr`."
    ]
   },
   {
