--- a/sprint_challenge/DS_Sprint_Challenge_21.ipynb
+++ b/sprint_challenge/DS_Sprint_Challenge_21.ipynb
@@ -368,7 +368,8 @@
    },
    "outputs": [],
    "source": [
-    "'''T4: Split `X` and `y` into training, validation, and testing sets.'''\n",
+
+    "'''T4: Split `X` and `y` into training and validation sets.'''\n",
     "\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()"
